# cfs_decode

./: .gitignore  CMakeLists.txt  Makefile  README.md  cfs_decode.f90  date_link_mod.f90  decode.sh  get_cfs_field_mod.f90  get_cfs_field_mod1.f90  namelist  output_mod.f90  params_mod.f90
